--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -33,6 +33,8 @@ h3 {
   margin-top: 1rem;
   background-color: cadetblue;
   color: white;
+  position: fixed;
+  z-index: 5; 
 }
 
 .logo-and-company-container {
@@ -111,4 +113,37 @@ h3 {
 
 .one img{
   width: 3.5rem;
+}
+
+.about-us-container {
+  display: flex;
+  justify-content: center;
+}
+
+.about-us-container .site-container {
+  display: flex;
+  justify-content: center;
+  align-items: flex-start;
+
+}
+
+.about-us-item {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  padding-top: 3rem;
+  width: 35%;
+  padding-right: 5%;
+}
+
+.title {
+  background-color: cadetblue;
+  padding: 0.5rem 1.25rem;
+  font-weight: bold;
+  width: 10rem;
+  color: white;
+}
+.text {
+  padding-top: 1rem;
+
 }
