--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -15,7 +15,9 @@ h1 {
 h3 {
   font-size: 1rem;
 }
-
+.mobile {
+  display: none;
+}
 .header {
   display: flex;
   justify-content: center;
@@ -188,6 +190,110 @@ justify-content: center;
   }
 }
 
-@media only screen and (max-width) {
+@media only screen and (max-width:480px) {
+  .body {
+    font-size: 0.77rem;
+  }
+
+  .header .site-container {
+    width: 100%;
+    margin-top: 0;
+    height: 100%;
+    display: flex;
+    justify-content: space-between;
+  }
+
+  .site-container .logo-and-company-container {
+    display: flex;
+    justify-content: flex-start;
+    padding-left: 2rem;
+  }
+
+  .company-name {
+    display: none;
+  }
+
+  .nav-item {
+    display: none;
+  }
+  .nav-container {
+    height: 3rem;
+    display: flex;
+    align-items: center;
+  }
+  .nav-container .mobile {
+    display: flex;
+    justify-content: flex-end;
+
+  }
+
+  .hero {
+      margin-top: -4rem;
+      height: 17rem;
+      background-position: 20%;
+  }
+
+  .hero .site-container {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+  }
+  .featured-container {
+    margin-top: 9rem;
+    margin-right: 0;
+    width: 100%;
+    text-align: center;
+  }
+
+  .featured-container h1 {
+    padding: 1rem 0;
+    font-size: 1rem;
+  }
+
+  .info-container .site-container {
+    display: flex;
+    flex-direction: column;
+    margin: 3.77rem 0;
+  }
+
+  .info-item {
+    padding-bottom: 1.54rem 0;
+  }
+  .about-us-container .site-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-top:0;
+    width: 100%;
+  }
+
+  .about-us-item {
+    width: 100%;
+    padding: 0;
+  }
+
+  .about-us-item .title {
+    width: 100%;
+    text-align: center;
+    padding: 0.5rem 0;
+  }
+
+  .about-us-item .text {
+    padding: 1rem .5rem 4rem .5rem;
+  }
+  .footer-container .site-container {
+    margin-top: 0;
+  }
+  .footer-container .site-container {
+    display: flex;
+    justify-content: center;
+  }
+
+  .site-container .logo-and-company-container {
+    padding: 0;
+    display: flex;
+    justify-content: center;
+  }
+
 
 }
